qxsl.{sheet,extra.sheet} upgrade